apps/sz-service/sz-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sz-service
  namespace: sz-service
spec:
  selector:
    matchLabels:
      app: sz-service
  replicas: 1
  template:
    metadata:
      labels:
        app: sz-service
    spec:
      containers:
        - name: sz-service
          image: ausraster/sz-download:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: sz-service-pv
              mountPath: /app/files
      volumes:
        - name: sz-service-pv
          persistentVolumeClaim:
            claimName: sz-service-pvc
      imagePullSecrets:
        - name: docker-hub
---
apiVersion: v1
kind: Service
metadata:
  name: sz-service
  namespace: sz-service
spec:
  selector:
    app: sz-service
  ports:
    - protocol: TCP
      port: 8000
