apps/sz-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sz-service
  namespace: sz-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - sz-service.tmem.de
      secretName: sz-service-tls
  rules:
    - host: sz-service.tmem.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sz-service
                port:
                  number: 8000
